@@ -9,5 +9,5 @@
 
 pwd=`pwd`
 cd "${0%/*}"
-java -Xmx512M -cp libs/robocode.jar robocode.Robocode $*
+java -Xmx512M -cp libs/robocode.jar -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" robocode.Robocode $*
 cd "${pwd}"
